Exercise 5 done: When someone wins, highlight the three squares that caused the win.

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ body {
     text-align: center;
     width: 34px;
   }
+
+  .square-winner {
+    background: #13fb3a;
+  }
   
   .square:focus {
     outline: none;
